modify Test Classes by JJY - api 변경에 따른 test 코드 수정